name:              MicroServe
version:           0.0.1
cabal-version:     >= 1.8
build-type:        Simple

executable MicroServe
    main-is:           main.hs
    ghc-options:       -threaded -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable

    build-depends: base                          >= 4
                 , yesod                         >= 1.2.5
                 , yesod-core                    >= 1.2
                 , yesod-auth                    >= 1.2
                 , yesod-static                  >= 1.2
                 , yesod-form                    >= 1.3
                 , bytestring                    >= 0.9
                 , text                          >= 0.11
                 , persistent                    >= 1.3
                 , persistent-sqlite             >= 1.3
                 , persistent-template           >= 1.3
                 , template-haskell
                 , hamlet                        >= 1.1
                 , shakespeare                   >= 2.0.0
                 , shakespeare-css               >= 1.0
                 , shakespeare-js                >= 1.2
                 , shakespeare-text              >= 1.0
                 , hjsmin                        >= 0.1
                 , monad-control                 >= 0.3
                 , wai-extra                     >= 2.0
                 , yaml                          >= 0.8
                 , http-conduit                  >= 2.0
                 , directory                     >= 1.1
                 , warp                          >= 2.0
                 , data-default
                 , aeson                         >= 0.6
                 , conduit                       >= 1.0
                 , monad-logger                  >= 0.3
                 , fast-logger                   >= 2.1.4
                 , wai-logger                    >= 2.1
                 , time                          >= 1.4
                 , esqueleto                     >= 1.3.2
                 , mime-mail                     >= 0.4.4
                 , blaze-html                    >= 0.7.0.1
                 , mime-types                    >= 0.1.0.4
                 , filepath                      >= 1.3.0.1
                 , http-types                    >= 0.8.4
