name:              MicroServe
version:           0.0.1
cabal-version:     >= 1.8
build-type:        Simple

executable MicroServe
    main-is:           main.hs
    ghc-options:       -threaded -O2 -Wall

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable

    build-depends: base                          >= 4
                 , yesod                         >= 1.2.5
                 , yesod-core                    >= 1.2
                 , yesod-form                    >= 1.3
                 , bytestring                    >= 0.9
                 , text                          >= 0.11
                 , template-haskell
                 , hamlet                        >= 1.1
                 , monad-control                 >= 0.3
                 , directory                     >= 1.1
                 , mime-types                    >= 0.1.0.4
                 , filepath                      >= 1.3.0.1
                 , http-types                    >= 0.8.4
                 , regex-posix                   >= 0.95
